--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -1,12 +1,29 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
-    <h:head>
-        <title>Facelet Title</title>
-    </h:head>
-    <h:body>
-        Hello World
-    </h:body>
+<html  
+    xmlns="http://www.w3.org/1999/xhtml"
+    xmlns:h="http://java.sun.com/jsf/html"
+    xmlns:f="http://java.sun.com/jsf/core">
+    <f:view>
+        <h:head>
+            <title>#{resrc['index.welcome']}</title>
+        </h:head>
+        <h:body>
+            <h:form>
+                <h3><h:outputText value="#{resrc['index.welcome']}" /></h3>
+                <h:panelGrid columns="2"> 
+                    #{resrc['index.language']} : 
+                    <h:selectOneMenu onchange="submit()" valueChangeListener="#{LangBean.langChange}">
+                        <f:selectItem itemValue="1" itemLabel="FR"/>
+                        <f:selectItem itemValue="2" itemLabel="EN"/>
+                    </h:selectOneMenu>
+                </h:panelGrid>
+            </h:form>
+            <h:form>       
+                <h:commandLink action="customersList">
+                    <h:outputText value="#{resrc['customersList.title']}"></h:outputText>
+                </h:commandLink>
+            </h:form>
+        </h:body>
+    </f:view>
 </html>
-
