--- a/web/NewCustomer.xhtml
+++ b/web/NewCustomer.xhtml
@@ -1,16 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-    <head>
-        <title>TODO supply a title</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    </head>
-    <body>
-        <div>TODO write content</div>
-    </body>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:f="http://java.sun.com/jsf/core"
+      lang="#{UserData.language}">
+    <f:view locale="#{UserData.locale}">
+        <head>
+            <title>#{resrc["NewCustomerTitle"]}</title>
+            <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        </head>
+        <body>
+            <h1>#{resrc["customersList.title"]}</h1>
+            <h:form>   
+                <h:panelGrid columns="2">
+                    <h:outputLabel>#{resrc["NewCustomerNumber"]} : </h:outputLabel>
+                    <h:inputText required="true" requiredMessage="#{rescr['NewCustomerNumberError']}" value="#{CustomerBean.number}"/>
+                    <h:outputLabel>#{resrc["NewCustomerFirstName"]} : </h:outputLabel>
+                    <h:inputText required="true" requiredMessage="#{resrc['NewCustomerFirstNameError']}" value="#{CustomerBean.firstName}"/>
+                    <h:outputLabel>#{resrc["NewCustomerLastName"]} : </h:outputLabel>
+                    <h:inputText required="true" requiredMessage="#{resrc['NewCustomerLastNameError']}" value="#{CustomerBean.lastName}"/>
+                    <h:commandButton value="#{resrc['reset']}" type="reset" />
+                    <h:commandButton value="#{resrc['create']}" action="#{CustomerBean.create}" />
+                </h:panelGrid>
+                <br />
+                <h:commandButton value="#{resrc['cancel']}" action="customersList" immediate="true" />
+            </h:form>
+        </body>
+    </f:view>
 </html>
