Finalisation de la page NewCustomer avec la navigation Etienne

--- a/web/NewCustomer.xhtml
+++ b/web/NewCustomer.xhtml
@@ -10,7 +10,7 @@
             <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         </head>
         <body>
-            <h1>#{resrc["customersList.title"]}</h1>
+            <h1>#{resrc["NewCustomerTitle"]}</h1>
             <h:form>   
                 <h:panelGrid columns="2">
                     <h:outputLabel>#{resrc["NewCustomerNumber"]} : </h:outputLabel>
