Commit de l'état actuel de l'application. Reste encore à afficher le détail des comptes lié à un client. Le bean est normalement fonctionnel. Reste encore à vérifier lors de la mise en place du formulaiire.
Etienne

--- a/web/customerDetails.xhtml
+++ b/web/customerDetails.xhtml
@@ -30,6 +30,33 @@
         <h:form>
             <h:outputText value="#{resrc['CustomerDetailsEmpty']}" rendered="#{empty DetailsBean.customerEdit.accounts}" />
         </h:form>
+        <h:form>
+            <h:outputText value="#{resrc['CustomerDetailsEmpty']}" rendered="#{empty customerDetailsBean.customerEdit.accounts}" />
+            <h:dataTable id="accountsList" value="#{customerDetailsBean.customerEdit.accounts}" var="account" rendered="#{not empty customerDetailsBean.customerEdit.accounts}">
+                <h:column>
+                    <f:facet name="header">#{resrc['AccountNumber']}</f:facet>
+                        #{account.number}
+                </h:column>
+                <h:column>
+                    <f:facet name="header">#{resrc['AccountName']}</f:facet>
+                        #{account.name}
+                </h:column>
+                <h:column>
+                    <f:facet name="header">#{resrc['AccountBalance']}</f:facet>
+                        #{account.balance}
+                </h:column>
+                <h:column>
+                    <f:facet name="header">#{resrc['AccountRate']}</f:facet>
+                        #{account.rate}
+                </h:column>
+                <h:column>
+                    <h:commandLink action="#{customerDetailsBean.accountDetails(account)}">
+                        <h:outputText value="#{resrc['CustomerDetailsAccountDetails']}"/>
+                    </h:commandLink>
+                </h:column>
+            </h:dataTable>
+        </h:form>
+        
         <br />
         <h:form>
             <h:commandLink action="customersList">
