--- a/web/customersList.xhtml
+++ b/web/customersList.xhtml
@@ -25,7 +25,7 @@
                             #{customer.lastName}
                     </h:column>
                     <h:column>
-                        <h:commandLink action="#{ListBean.customerDetails(customer)}">
+                        <h:commandLink action="#{ListBean.Details(customer)}">
                             <h:outputText value="#{resrc['CustomersListCustomerDetails']}"/>
                         </h:commandLink>
                     </h:column>
