Mise en place du détail des comptes d'un client et mise en place de l'interface Etienne

--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -20,9 +20,8 @@
                 </h:panelGrid>
             </h:form>
             <h:form>       
-                <h:commandLink action="customersList">
-                    <h:outputText value="#{resrc['CustomersListTitle']}"></h:outputText>
-                </h:commandLink>
+                <br /> 
+                <h:commandButton action="customersList" value="#{resrc['CustomersListTitle']}" />
             </h:form>
         </h:body>
     </f:view>
