lors du commit précédent "Commit général pour la version 1 du projet final". plusieurs fichier on disparu du coup j'ai recloner le projet afin de récupérer les données. J'ai refais un commit car les deux fichier xhtml on vu leurs nom être modifie la majuscule du début à disparu.
Etienne

--- a/web/CustomersList.xhtml
+++ b/web/CustomersList.xhtml
@@ -35,7 +35,9 @@
             </h:form>
             <br />
             <h:form>
-                <h:commandButton value="#{resrc['IndexBack']}" action="index" />
+                <h:commandLink action="index">
+                    <h:outputText value="#{resrc['IndexBack']}"></h:outputText>
+                </h:commandLink>
             </h:form>
         </body>
     </f:view>
